@@ -3,6 +3,7 @@
 - Fix iterating in config.columns with threadsafety enabled
 - Fix changing pagination enabled/disabled with threadsafety enabled
 - Allow create action in has_many through singular association
+- Display no options in radio form_ui when no option is available, so column can be refreshed with update_columns
 
 = 3.6.0.pre
 - Added threadsafety as tech preview, enabled with ActiveScaffold.threadsafe! in initializer.
